<resources>
    <string name="app_name">SuperLive</string>
    <string name="is_positive">确定</string>
    <string name="j_service">回顾</string>
    <string name="j_activite">活动</string>
    <string name="j_doing">进行</string>
    <string name="j_allChips">众筹</string>
    <string name="j_mine">我的</string>
    <string name="access_net">访问网络</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="is_send">确定要发送此名片吗？</string>
    <string name="no_vide_file">没有视频文件</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="sd_shared">请您先退出USB模式,再运行该应用</string>
    <string name="sd_unmounted">SD卡未加载到手机</string>
    <string name="sd_removed">未找到SD卡</string>
    <string name="sd_noinsert">未找到SD卡</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="file_notexist">这个文件已经不存在</string>
    <string name="confirm_addvideo">确认要添加此视频吗？</string>
    <string name="fail_deletefile">删除文件失败</string>
    <string name="fail_deleterecent">删除列表失败</string>
    <string name="fail_renamefile">重命名文件失败</string>
    <string name="fail_renameexist">该文件已存在！</string>
    <string name="fail_renametoolong">文件名过长，重命名失败！</string>
    <string name="fail_renameempty">文件名为空，重命名失败！</string>
    <string name="rename_dialog">重命名</string>
    <string name="confirm_deletefile">确认要删除该文件吗？</string>
    <string name="confirm_deletefile_isnofile">该文件已经被删除了</string>
    <string name="bt_myticket">我的门票</string>
    <string name="bt_order">我的订单</string>
    <string name="bt_mark">积分</string>
    <string name="bt_collection">我的收藏</string>
    <string name="bt_address">收货地址</string>
    <string name="bt_aboutus">关于我们</string>
    <string name="sence_window_all">全部</string>
    <string name="sence_window_end">已结束</string>
    <string name="sence_window_nostart">未开始</string>
    <string name="sence_window_ing">进行中</string>
    <string name="sence_window_song">演唱会</string>
    <string name="sence_window_bisai">比赛</string>
    <string name="tv_discuss">讨论</string>
    <string name="tv_lyrics">歌词</string>
    <string name="tv_highlights">集锦</string>
    <string name="tv_surrounding">周边</string>
    <string name="interactive">互动</string>
    <string name="voice_lite">声音有点小哦!</string>
    <string name="voice_midd">太给力了。!</string>
    <string name="voice_sm">太幽静了</string>
    <string name="voice_m">是在现场吗？</string>
    <string name="voice_mm">不够躁啊~</string>
    <string name="voice_b">继续嗨起来</string>
    <string name="voice_bb">哎呀不错哦</string>
    <string name="memorry_low">内存不足，保存照片失败！</string>
    <string name="camera_open_fail">摄像头打开失败</string>
    <string name="service_food">餐饮</string>
    <string name="service_navigation">导航</string>
    <string name="service_car">用车</string>
    <string name="service_goods">商品</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="select_user">换乘车人</string>
    <string name="get_off_address">输入下车地点   </string>
    <string name="get_off_remind">(输入后可预估车费)</string>
    <string name="models_tesla">Tesla</string>
    <string name="models_cheap">经济型</string>
    <string name="models_charming">舒适型</string>
    <string name="models_business">商务型</string>
    <string name="explain_remind">同一系统自动为我挑选一辆车</string>
    <string name="explain">详细说明</string>
    <string name="sms_notification">订车成功后短信通知乘车人</string>
    <string name="contacts">通讯录</string>
    <string name="all_contacts">全部联系人</string>
    <string name="get_off">下车地点</string>
    <string name="edit_get_off_address">请输入下车地点</string>
    <string name="edit_ride_address">请输入上车地点</string>
    <string name="confirm_order">确认订单</string>
    <string name="confirm">确认</string>
    <string name="custom_car">去订车</string>
    <string name="indoor_title">室内地图</string>
    <string name="enter_indoor">进入室内</string>
    <string name="enter_test">进入测试</string>
    <string name="enter_indoor_list">室内列表</string>
    <string name="indoor_txt_title">室内名称</string>
    <string name="indoor_txt_floorname">室内楼层名</string>
    <string name="indoor_btn_back">返回</string>
    <string name="indoor_btn_search_category_txt">搜索</string>
    <string name="indoor_list_txt_title">室内列表</string>
    <string name="indoor_list_count">室内数量:0个</string>
    <string name="indoor_list_search_hint">请输入室内名称</string>
    <string name="indoor_search_hint">请输入关键字</string>
    <string name="indoor_contentDescription">室内控件描述</string>
    <string name="indoor_switchfloor_previous">室内切换上一楼层</string>
    <string name="indoor_switchfloor_next">室内切换下一楼层</string>
    <string name="indoor_pub_txt">设施</string>
    <string name="indoor_recommend_txt">优惠</string>
    <string name="indoor_search_service_txt">服务</string>
    <string name="indoor_search_business_txt">商家</string>
    <string name="indoor_draw_time_txt">渲染总耗时:0毫秒</string>
    <string name="indoor_edittext_start_hint">输入起点</string>
    <string name="indoor_edittext_end_hint">输入终点</string>
    <string name="indoor_mappoint_description">地图选点</string>
    <string name="indoor_routeplan_description">路线规划</string>
    <string name="indoor_btn_back_description">返回</string>
    <string name="indoor_exchange_description">起点和终点切换</string>
    <string name="indoor_clear_input_description">清空输入</string>
    <string name="indoor_talkback_previous">上一步</string>
    <string name="indoor_talkback_next">下一步</string>
    <string name="indoor_footdistance">445米</string>
    <string name="indoor_search_edittext_hint">  室内搜索</string>
    <string name="indoor_detail_poi_name_txt">poi名称</string>
    <string name="indoor_detail_poi_address_txt">poi地址</string>
    <string name="indoor_detail_txt">详情</string>
    <string name="indoor_pano_txt">室景</string>
    <string name="indoor_setting_start_txt">设为起点</string>
    <string name="indoor_setting_end_txt">设为终点</string>
    <string name="indoor_bussiness_txt">精品商家</string>
    <string name="indoor_service_txt">服务设施</string>
    <string name="letv_network_message">(>﹏&lt;)当前网络处于非wifi状态，请检查网络</string>
    <string name="letv_notice_message">(>﹏&lt;)播放失败了，重新播放一下试试？</string>
    <string name="account_number">请输入手机号/邮箱/用户名</string>
    <string name="password">6-16位字母或者数字</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="registers">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="wechat_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="sina_login">新浪登录</string>
    <string name="get_activation_code">获取激活码</string>
    <string name="phone">请输入手机号</string>
    <string name="activation_code">获取的激活码</string>
    <string name="codes">右侧图片验证码</string>
    <string name="use_agreement">同意</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="new_pwd">新密码</string>
    <string name="complete">完成</string>
    <string name="send_sms">去发短信</string>
    <string name="registeractivity_second">s后重新获取</string>
    <string name="get_mobile_code_fail">激活码发送失败，请重试</string>
    <string name="phone_number_is_not_null">手机号码不能为空</string>
    <string name="phone_number_is_worng">手机号码错误</string>
    <string name="vfcode_is_not_null">验证码不能为空</string>
    <string name="vfcode_is_not_right">验证码长度不正确</string>
    <string name="input_right_phone_num">请输入正确的手机号码</string>
    <string name="phone_number_hint_text">请输入手机号</string>
    <string name="phone_number_hint_text2">11位手机号码</string>
    <string name="login_errorcode_1011">手机号格式错误</string>
    <string name="login_errorcode_1000">参数错误</string>
    <string name="login_errorcode_1026">每个手机号每天最多能够发送3条短信</string>
    <string name="login_errorcode_1027">图片验证码不正确</string>
    <string name="registeractivity_send">激活码短信已发送至您填写的手机，请查收</string>
    <string name="agree_letv_protol">请同意乐视服务使用协议</string>
    <string name="load_data_no_net">网络连接失败，请检查您的网络！</string>
    <string name="toast_net_null">没有网络</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_verify_num">请输入激活码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="pwd_alert">密码应由6-16位数字/字母组成</string>
    <string name="regist_fail">注册失败</string>
    <string name="param_error">参数错误</string>
    <string name="username_error">用户名格式不正确,请更换用户名</string>
    <string name="username_exist">用户名已存在,请更换用户名</string>
    <string name="mobile_exist">手机已存在</string>
    <string name="ip_reg_exist">每个ip每天只能注册20条</string>
    <string name="code_mobile_error">激活码已经过期或者手机号错误</string>
    <string name="usernickname_exist">昵称已存在或者格式不合法</string>
    <string name="mobile_code_error">激活码错误</string>
    <string name="reg_filied">注册时入库失败</string>
    <string name="regist_success">注册成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="name_null">请输入乐视帐号</string>
    <string name="pword_null">请输入密码</string>
    <string name="load_fail">登录失败</string>
    <string name="account_pwd_error">帐号或密码不正确，请重新输入</string>
    <string name="user_shield">该用户已被管理员屏蔽</string>
    <string name="request_illegal">请求来源不合法</string>
    <string name="request_overnumber">登录次数太多,账号暂被冻结</string>
    <string name="login_tomuch">登录次数太多,需要输入验证码</string>
    <string name="moreaboutusactivity_webtitle">乐视网</string>
    <string name="login_qq">腾讯QQ登录</string>
    <string name="login_weibo">新浪微博登录</string>
    <string name="sms_send_remind">编辑新密码发至</string>
    <string name="sms_phone_number">1069032901305721</string>
    <string name="pwd_format">密码格式：6-16数字,字母或符号</string>
    <string name="shared">分享</string>
    <string name="title1">God of War Ascension</string>
    <string name="title2">Assassin\'s Creed III</string>
    <string name="title3">Hitman Absolution</string>
    <string name="title4">Dishonored</string>
    <string name="my_appointment_t">我的预约</string>
    <string name="my_crowd_t">我的众筹</string>
    <string name="my_order_t">我的订单</string>
    <string name="my_gasses_t">我的优惠券</string>
    <string name="my_awarder_t">我的奖品</string>
    <string name="my_address_receiver_t">收货地址</string>
    <string name="my_settings_t">设置</string>
    <string name="order_all">全部</string>
    <string name="order_wait_send">待发货</string>
    <string name="order_wait_pay">待支付</string>
    <string name="order_wait_receiver">待收货</string>
    <string name="prize_unreceiver">未领取</string>
    <string name="prize_receiver">已领取</string>
    <string name="guessing">进行中</string>
    <string name="guess_overed">已结束</string>
    <string name="geiPrice">给我们评价</string>
    <string name="suggestion">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="tuijian">推荐给小伙伴</string>
    <string name="droupout">退出当前账号</string>
    <string name="nicek_name">昵称</string>
    <string name="sex">性别</string>
    <string name="city">城市</string>
    <string name="mobile">手机号</string>
    <string name="my_order_title">我的订单</string>
</resources>