<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    
    <com.lesports.stadium.view.CircleImageView
        android:id="@+id/iv_self_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/driver_defaulthead" 
        app:border_width1="2dp"
        app:border_color1="@color/white" 
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/red"
        android:text="@string/j_mine"/>
    
    <Button 
        android:id="@+id/bt_myticket"
        android:layout_width="300dp"
        android:layout_height="50dp"  
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_myticket"
        android:background="#33333333"
        />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/bt_order"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/bt_order"
            />
         <Button 
            android:id="@+id/bt_mark"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/bt_mark"
            />   
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <Button 
            android:id="@+id/bt_collection"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/bt_collection"
            />
         <Button 
            android:id="@+id/bt_address"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/bt_address"
            />
         <Button 
            android:id="@+id/bt_aboutus"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/bt_aboutus"
            />
    </LinearLayout>
    

</LinearLayout>