<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/click"
    android:cacheColorHint="#00000000"
    android:orientation="vertical" >

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
        android:id="@+id/sence_window_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:text="@string/sence_window_all" />
     <TextView
        android:id="@+id/sence_window_ing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:text="@string/sence_window_ing" />
      <TextView
        android:id="@+id/sence_window_nostart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:text="@string/sence_window_nostart" />
       <TextView
        android:id="@+id/sence_window_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:text="@string/sence_window_end" />
        <TextView
        android:id="@+id/sence_window_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:visibility="gone"
        android:text="@string/sence_window_song" />
         <TextView
        android:id="@+id/sence_window_bisai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:visibility="gone"
        android:text="@string/sence_window_bisai" />
        </LinearLayout>
    </ScrollView>
    

</LinearLayout>
