<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:background="@drawable/login_bg"
    >
    
<!--      <com.lesports.stadium.view.MyVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" /> -->

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

     >
	  <RelativeLayout 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      >
	      <ImageView
	        android:id="@+id/iv_back"
	        android:layout_width="50dp"
       		android:layout_height="44dp"
        	android:scaleType="centerInside"
	        android:src="@drawable/ic_back"
	        android:contentDescription="@null"
	        android:layout_alignParentLeft="true"
	      /> 
        <TextView 
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forget_pwd_title"
          android:textColor="@color/white"
          android:textSize="@dimen/txt_size_36"
          android:layout_centerInParent="true"/>
      </RelativeLayout>   

	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingLeft="40dp"
	    android:paddingRight="40dp"
	     >		
		 <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="35dp"
	        android:layout_marginTop="100dp"
	        android:visibility="gone"
	        >
	        <EditText 
	            android:id="@+id/edt_phone"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:background="@null"
	            android:hint="@string/phone"
	            android:inputType="phone"
	            android:textColor="@color/white"/>
		    <TextView 
		       android:id="@+id/tv_send_code"
		        android:layout_width="70dp"
		        android:layout_height="25dp"
		        android:background="@drawable/bg_get_activation"
		        android:text="@string/get_activation_code"
		        android:textColor="@color/white"
		        android:textSize="10dp"
		        android:layout_alignParentRight="true" 
		        android:layout_centerVertical="true"
		        android:textCursorDrawable="@color/white"
		        android:gravity="center"
		        android:visibility="gone"/>		   
		</RelativeLayout>
	 	<include layout="@layout/driver_line"
	 	    android:visibility="gone"/>	     
		
	     <com.lesports.stadium.ui.ClearEditText  
	        android:id="@+id/edt_activation_code"  
	        android:layout_width="fill_parent"  
	        android:background="@null"   
	        android:drawableLeft="@null"    
	        android:singleLine="true"  
	        android:drawableRight="@drawable/abs__ic_clear_search_api_holo_light"  
	        android:hint="@string/codes"  
	        android:layout_height="35dp"
	        android:textSize="@dimen/txt_size_30"
	        android:textCursorDrawable="@color/white"
	        android:layout_marginTop="15dp"
	        android:textColor="@color/white"
	        android:visibility="gone"> 
		 </com.lesports.stadium.ui.ClearEditText>  
		   <include layout="@layout/driver_line"
		       android:visibility="gone"/>   

		   
	     <com.lesports.stadium.ui.ClearEditText  
	        android:id="@+id/edt_password"  
	        android:layout_width="fill_parent"  
	        android:background="@null"   
	        android:drawableLeft="@null"    
	        android:singleLine="true"  
	        android:drawableRight="@drawable/abs__ic_clear_search_api_holo_light"  
	        android:hint="@string/new_pwd"  
	        android:layout_height="35dp"
	        android:textSize="@dimen/txt_size_30"
	        android:textCursorDrawable="@color/white"
	        android:inputType="textPassword"
	        android:textColor="@color/white"
	        android:layout_marginTop="100dp"
	        android:visibility="gone"> 
	    </com.lesports.stadium.ui.ClearEditText>  
		<include layout="@layout/driver_line"
		    android:visibility="gone"/>   

		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/sms_send_remind"
		    android:textColor="@color/white"
		    android:textSize="@dimen/txt_size_40"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="120dp"
		    />
		 <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/sms_phone_number"
		    android:textColor="@color/white"
		    android:textSize="@dimen/txt_size_24"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="10dp"
		    />
		 <TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/pwd_format"
		    android:textColor="@color/white"
		    android:textSize="@dimen/txt_size_22"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="10dp"
		    />
	    <!-- 完成-->
        <TextView 
            android:id="@+id/tv_change"
            android:layout_width="match_parent"
       		android:layout_height="40dp"
	        android:background="@drawable/btn_bg_register"
	        android:gravity="center"
	        android:layout_marginTop="60dp"
            android:text="@string/send_sms"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_36"/>
		
    </LinearLayout>
</LinearLayout>
</RelativeLayout>