<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/indoorbg_color" >

    <!-- 室内建筑列表顶部标题栏 -->

    <LinearLayout
        android:id="@+id/indoor_list_toptitle_Layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/indoor_list_txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/indoor_list_txt_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/indoor_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/indoor_contentDescription"
            android:gravity="center"
            android:text="@string/indoor_btn_search_category_txt"
            android:textColor="@color/indoorbg_color"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/indoor_search_input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/indoor_list_toptitle_Layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/indoor_building_keywords"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:hint="@string/indoor_list_search_hint"
            android:singleLine="true" />

        <Button
            android:id="@+id/indoor_list_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="搜索" />
        <Button
            android:id="@+id/indoor_btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刷新"
            android:textColor="@color/indoorbg_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/indoor_building_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/indoor_search_input_layout"
        android:layout_margin="5dp"
        android:text="@string/indoor_list_count"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/indoor_list_result"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/indoor_building_count"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000" />

</RelativeLayout>